--- a/index.html
+++ b/index.html
@@ -2,9 +2,16 @@
 
 <html lang="fr">
 <head>
+
+	<meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
+
 	<title>Vodsky & Whika</title>
+
 	<link href='http://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>
 	<link href='http://fonts.googleapis.com/css?family=Raleway:800' rel='stylesheet' type='text/css'>
+
 	<link rel="stylesheet" href="/css/reset.css">
 	<link rel="stylesheet" href="/css/jscrollpane.css">
 	<link rel="stylesheet" href="/css/fontello/css/fontello.css">
@@ -15,6 +22,7 @@
 	<link rel="stylesheet" href="/css/chat.css">
 	<link rel="stylesheet" href="/css/landing.css">
 	<link rel="stylesheet" href="/css/media.css">
+	
 </head>
 <body>
 <div id="fb-root"></div>
@@ -258,7 +266,7 @@
 			  </div>
 			  	<div id="frozenTimezone" class="none">
 					<h2>Fais un break</h2>
-					<center><h3>Les évènements sont femrés le matin, reprise à 14H. Time to sleep.</h3></center>
+					<center><h3>Les évènements sont fermés le matin, reprise à 14H. Time to sleep.</h3></center>
 				</div>
 				<section id="eventsListWrap"> <!-- Content dynamically loaded --> </section>
 				<div id="friendListWrap" class="none">
