small menu view

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 	<link rel="stylesheet" href="/css/chat.css">
 	<link rel="stylesheet" href="/css/landing.css">
 	<link rel="stylesheet" href="/css/media.css">
-	
+
 </head>
 <body>
 <div id="fb-root"></div>
@@ -43,7 +43,8 @@
 <div class="progress_bar"></div>
 <div class="loaderWrap"></div>
 <div class="m-loaderWrap"></div>
-	<header class="">
+	  
+	<header class="lg-header">
 	  <div id="headerContent">
 		<h1><i class="icon icon-attention-alt"></i>VW</h1>
 		  <ul id="menuWrap" class="">
@@ -56,10 +57,13 @@
 			<li id="contact" class="right menu-item icon icon-mail-alt" data-linkedcontent="#contactWrap" ><span class="underlay"></span></li>
 		  </ul>
 	  </div>
+	  <div class="sm-header none">
+		<button class="sm-signup">S'inscrire</button>
+		<button class="sm-fb">Facebook</button>
+		<button class="sm-login">Login</button>
+	   </div>
 	  <section id="loginWrapp" class="revealed right">
-		  <div>
-			Connexion
-		  </div>
+		  <div> Connexion </div>
 			<div class="formWrap">
 				<form autocomplete="off">
 					<input class="header-field" type="text" id="email" placeholder="email">
