--- a/index.html
+++ b/index.html
@@ -63,12 +63,12 @@
 		<button class="sm-fb"><i class="icon icon-facebook"></i></button>
 		<button class="sm-login">Login</button>
 	   </div>
-	  <div class="sm-loginWrap none">
-	  	<h2>Identification old school</h2>
+	  <div class="sm-loginWrap none centered">
+	  	<h2>Identification</h2>
 	  	<form>
-		  	<label for=""></label><input id="m-email"type="text" placeholder="email"></input>
-		  	<label for=""></label><input id="m-pw" type="text" placeholder="password"></input>
-		  	<label for=""></label><input class="themeBtn" type="submit"></input>
+		  	<label for="">Email</label><input id="m-email"type="text" placeholder="email"></input>
+		  	<label for="">Mot de passe</label><input id="m-pw" type="text" placeholder="password"></input>
+		  	<label for=""></label><input class="themeBtn" type="submit" value="login"></input>
 	  	</form>
 	  </div>
 	  <section id="loginWrapp" class="revealed right">
@@ -237,7 +237,7 @@
 						<label for="name">Nom</label>
 						<input id="name" class="profileInput" placeholder="Prad Bitt" type="text" maxlength="25">
 					</div>
-					<div class="input-row-wrap">
+					<div class="input-row-wrap split">
 						<label for="age">Age</label>
 						<input id="age" class="profileInput" placeholder="25" type="number" max="50" min="18">
 					</div>
@@ -252,7 +252,7 @@
 							<div class="drink" data-drink="kro">kro</div>
 						</div>
 					</div>
-					<div class="input-row-wrap">
+					<div class="input-row-wrap split">
 						<label for="mood">Humeur du jour</label>
 						<div id="mood">
 							<div class="mood" data-mood="whatever">whatever</div>
