--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
 							<div class="mood" data-mood="tired">tired</div>
 							<div class="mood" data-mood="drunk">still drunk</div>
 							<div class="mood" data-mood="happy">happy</div>
-							<div class="mood" data-mood="happy">fail</div>
+							<div class="mood" data-mood="fail">fail</div>
 							<div class="mood" data-mood="fired">on fire</div>
 						</div>
 					</div>
@@ -408,7 +408,11 @@
 		<script src="js/lj-params.js"></script>
 		<script src="js/lj-render.js"></script>
 		<script src="js/lj-domEvents.js"></script>
+		<script src="js/lj-admin.js"></script>
 		<script src="js/lj.js"></script>
+
+		<!-- Analytics-->
+		<script src="js/ga.js"></script>
 
 	</body>
 	</html>
