--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 <div class="overlay overlay-high"></div>
 <div class="overlay overlay-low"></div>
 <div class="overlay overlay-veryhigh"></div>
-<div id="adminPanel"></div>
+<div id="adminPanelWrap"></div>
 <div class="progress_bar"></div>
 <div class="loaderWrap"></div>
 <div class="m-loaderWrap"></div>
