--- a/index.html
+++ b/index.html
@@ -295,6 +295,9 @@
 					<center><h3>Les meefores sont fermés le matin, reprise à 14H. Time to sleep.</h3></center>
 				</div>
 				<section id="eventsListWrap"> <!-- Content dynamically loaded --> </section>
+				<div id="no">
+					
+				</div>
 				<div id="friendListWrap" class="none">
 						<div id="myFriends">
 						<!-- Content dynamically loaded -->	
