--- a/index.html
+++ b/index.html
@@ -182,7 +182,8 @@
 	                            <div class="services-box-info">
 	                                <h4>Ajoutez vos amis</h4>
 	                                <p>
-	                                    Si tes amis sont encore au boulot ou en train de dormir aucun problème.
+	                                    Si tes amis sont encore au boulot ou en train de dormir aucun problème, ajoute les à leur place. 
+	                                    L'organisateur voit que vous vous connaissez.
 
 	                                </p>
 	                            </div>
