--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 
 <html lang="fr">
@@ -353,7 +354,7 @@
 				</div>
 			</section>
 			<section id="searchUsersWrap" class="none centered">
-				<h2>Retrouve tes amis</h2>
+				<h2>Ajoute tes amis</h2>
 				<div class="actionsWrap actionsStyle">
 					<span id="friendsOnly" class="action">Amis uniquement</span>
 				</div>
