--- a/public/css/fontello/demo.html
+++ b/public/css/fontello/demo.html
@@ -229,11 +229,11 @@ body {
 }
 @font-face {
       font-family: 'fontello';
-      src: url('./font/fontello.eot?26519201');
-      src: url('./font/fontello.eot?26519201#iefix') format('embedded-opentype'),
-           url('./font/fontello.woff?26519201') format('woff'),
-           url('./font/fontello.ttf?26519201') format('truetype'),
-           url('./font/fontello.svg?26519201#fontello') format('svg');
+      src: url('./font/fontello.eot?42652873');
+      src: url('./font/fontello.eot?42652873#iefix') format('embedded-opentype'),
+           url('./font/fontello.woff?42652873') format('woff'),
+           url('./font/fontello.ttf?42652873') format('truetype'),
+           url('./font/fontello.svg?42652873#fontello') format('svg');
       font-weight: normal;
       font-style: normal;
     }
@@ -422,11 +422,12 @@ body {
       </div>
       <div class="row">
         <div title="Code: 0xe850" class="the-icons span3"><i class="demo-icon icon-cheers">&#xe850;</i> <span class="i-name">icon-cheers</span><span class="i-code">0xe850</span></div>
+        <div title="Code: 0xe851" class="the-icons span3"><i class="demo-icon icon-down-bold">&#xe851;</i> <span class="i-name">icon-down-bold</span><span class="i-code">0xe851</span></div>
         <div title="Code: 0xe852" class="the-icons span3"><i class="demo-icon icon-comment">&#xe852;</i> <span class="i-name">icon-comment</span><span class="i-code">0xe852</span></div>
         <div title="Code: 0xe853" class="the-icons span3"><i class="demo-icon icon-peace">&#xe853;</i> <span class="i-name">icon-peace</span><span class="i-code">0xe853</span></div>
-        <div title="Code: 0xe854" class="the-icons span3"><i class="demo-icon icon-innocent">&#xe854;</i> <span class="i-name">icon-innocent</span><span class="i-code">0xe854</span></div>
       </div>
       <div class="row">
+        <div title="Code: 0xe854" class="the-icons span3"><i class="demo-icon icon-innocent">&#xe854;</i> <span class="i-name">icon-innocent</span><span class="i-code">0xe854</span></div>
         <div title="Code: 0xe855" class="the-icons span3"><i class="demo-icon icon-drunk">&#xe855;</i> <span class="i-name">icon-drunk</span><span class="i-code">0xe855</span></div>
         <div title="Code: 0xe856" class="the-icons span3"><i class="demo-icon icon-horney">&#xe856;</i> <span class="i-name">icon-horney</span><span class="i-code">0xe856</span></div>
       </div>
