--- a/public/css/lib/fontello/demo.html
+++ b/public/css/lib/fontello/demo.html
@@ -229,11 +229,11 @@ body {
 }
 @font-face {
       font-family: 'fontello';
-      src: url('./font/fontello.eot?80667312');
-      src: url('./font/fontello.eot?80667312#iefix') format('embedded-opentype'),
-           url('./font/fontello.woff?80667312') format('woff'),
-           url('./font/fontello.ttf?80667312') format('truetype'),
-           url('./font/fontello.svg?80667312#fontello') format('svg');
+      src: url('./font/fontello.eot?75627879');
+      src: url('./font/fontello.eot?75627879#iefix') format('embedded-opentype'),
+           url('./font/fontello.woff?75627879') format('woff'),
+           url('./font/fontello.ttf?75627879') format('truetype'),
+           url('./font/fontello.svg?75627879#fontello') format('svg');
       font-weight: normal;
       font-style: normal;
     }
@@ -363,7 +363,7 @@ body {
       <div class="row">
         <div title="Code: 0xe828" class="the-icons span3"><i class="demo-icon icon-headphones">&#xe828;</i> <span class="i-name">icon-headphones</span><span class="i-code">0xe828</span></div>
         <div title="Code: 0xe829" class="the-icons span3"><i class="demo-icon icon-gift">&#xe829;</i> <span class="i-name">icon-gift</span><span class="i-code">0xe829</span></div>
-        <div title="Code: 0xe82a" class="the-icons span3"><i class="demo-icon icon-mail-1">&#xe82a;</i> <span class="i-name">icon-mail-1</span><span class="i-code">0xe82a</span></div>
+        <div title="Code: 0xe82a" class="the-icons span3"><i class="demo-icon icon-mail">&#xe82a;</i> <span class="i-name">icon-mail</span><span class="i-code">0xe82a</span></div>
         <div title="Code: 0xe82b" class="the-icons span3"><i class="demo-icon icon-main-picture">&#xe82b;</i> <span class="i-name">icon-main-picture</span><span class="i-code">0xe82b</span></div>
       </div>
       <div class="row">
